<resources>
    <string name="app_name">Mov by BWA</string>
    <string name="mov_logo_description">Mov Logo</string>
    <string name="now_playing">Now Playing</string>
    <string name="onboard_1_text">Lebih mudah untuk mengetahui film yang sedang tayang</string>
    <string name="lewati">Lewati</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="onboarding_2_text">Tidak khawatir ketinggalan update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="onboarding_3_text">Gunakan E-Wallet untuk transaksi ticket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome,</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="title_home">Home</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="title_ticket">Ticket</string>
    <string name="title_profile">Profile</string>
    <string name="now_playing_">NOW PLAYING</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="storyboard">Storyboard</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="beli_ticket_d">BELI TICKET (%d)</string>
    <string name="checkout">Checkout</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="booked">Booked</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="time">Time</string>
    <string name="cinema">Cinema</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="total">Total</string>
    <string name="items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="balance">Balance</string>
    <string name="balance_less">Saldo pada E-Wallet kamu tidak cukup untuk melakukan transaksi</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="success_text">Tiket berhasil dibeli! Selamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="text_balance">RP. %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s">Today\'s</string>
    <string name="movie_today">%d Movies</string>
    <string name="history">History</string>
    <string name="quick_print">Quick Print</string>
    <string name="scan_qr">Scan QR</string>
    <string name="barcode_text">Silahkan scan pada counter terdekat!</string>
    <string name="tutup">Tutup</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="settings">Settings</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
    <string name="my_wallet">My Wallet</string>
    <string name="help">Help</string>
    <string name="change_language">Change Language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="update_data">Update Data</string>
    <string name="top_up">Top Up</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="quick_options">Quick Options</string>
    <string name="idr_n20_000">IDR\n20.000</string>
    <string name="idr_n50_000">IDR\n50.000</string>
    <string name="idr_n100_000">IDR\n100.000</string>
    <string name="idr_n200_000">IDR\n200.000</string>
    <string name="idr_n300_000">IDR\n300.000</string>
    <string name="idr_n500_000">IDR\n500.000</string>
    <string name="top_up_success">Top Up Success!</string>
    <string name="grab_a_ticket_and_enjoy_watching">Grab a ticket and enjoy watching</string>
    <string name="check_wallet">Check Wallet</string>
</resources>