<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".topUp.TopUpFragment">

    <ImageButton
        android:id="@+id/bt_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dark_blue"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/my_wallet"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_up" />

    <TextView
        android:id="@+id/tv_topUp_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_up"
        tools:text="@string/idr_item" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/saldo_tersedia"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_topUp_balance"
        app:layout_constraintStart_toStartOf="@+id/tv_topUp_balance"
        app:layout_constraintTop_toBottomOf="@+id/tv_topUp_balance" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/custom_amount"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/ed_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/quick_options"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/ed_custom" />

    <TextView
        android:id="@+id/tv_20k"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/empty"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/idr_n20_000"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_50k"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/empty"
        android:gravity="center"
        android:text="@string/idr_n50_000"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_20k"
        app:layout_constraintEnd_toStartOf="@+id/tv_100k"
        app:layout_constraintStart_toEndOf="@+id/tv_20k"
        app:layout_constraintTop_toTopOf="@+id/tv_20k" />

    <TextView
        android:id="@+id/tv_100k"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/empty"
        android:gravity="center"
        android:text="@string/idr_n100_000"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_50k"
        app:layout_constraintEnd_toEndOf="@+id/ed_custom"
        app:layout_constraintTop_toTopOf="@+id/tv_50k" />

    <TextView
        android:id="@+id/tv_200k"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/empty"
        android:gravity="center"
        android:text="@string/idr_n200_000"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_20k"
        app:layout_constraintTop_toBottomOf="@+id/tv_20k" />

    <TextView
        android:id="@+id/tv_300k"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/empty"
        android:gravity="center"
        android:text="@string/idr_n300_000"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_200k"
        app:layout_constraintEnd_toStartOf="@+id/tv_500k"
        app:layout_constraintStart_toEndOf="@+id/tv_200k"
        app:layout_constraintTop_toTopOf="@+id/tv_200k" />

    <TextView
        android:id="@+id/tv_500k"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/empty"
        android:gravity="center"
        android:text="@string/idr_n500_000"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_300k"
        app:layout_constraintEnd_toEndOf="@+id/tv_100k"
        app:layout_constraintTop_toTopOf="@+id/tv_300k" />

    <Button
        android:id="@+id/bt_top_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_pink"
        android:text="@string/top_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_200k" />

</androidx.constraintlayout.widget.ConstraintLayout>